# WhoCame-cv

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  ruff.toml
.github/: dependabot.yaml
.github/workflows/: linter.yaml
src/: piccolo_conf.py
src/db/: __init__.py  piccolo_app.py  seeder.py  tables.py
src/logger/: __init__.py
src/whocame_cv/: __init__.py  __main__.py  deepface_utils.py  test.py
src/whocame_cv/source_decorators/: __init__.py  frame_series.py  front_camera.py
