[project]
name = "WhoCame-cv"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.11.0.86",
    "piccolo[postgres,uvloop]>=1.22.0",
]

[project.scripts]
whocame = "whocame_cv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
