[project]
name = "WhoCame-cv"
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = [
    "deepface>=0.0.93",
    "opencv-python>=4.11.0.86",
    "piccolo[postgres,uvloop]>=1.22.0",
    "python-dotenv>=1.0.1",
    "tensorflow-cpu>=2.18.0",
    "tf-keras>=2.18.0",
]

[project.scripts]
whocame = "whocame_cv.__main__:main"
db-seeder = "whocame_cv.db_seeder:seed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
