[project]
name = "WhoCame-cv"
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = [
    "aiofiles>=24.1.0",
    "deepface>=0.0.93",
    "opencv-python>=4.11.0.86",
    "piccolo[postgres,uvloop]>=1.22.0",
    "python-dotenv>=1.0.1",
    "tensorflow-cpu>=2.18.0",
    "tf-keras>=2.18.0",
]

[project.scripts]
cv = "whocame_cv:main_sync"
db-seeder = "db:seed_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
